5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4077/executions/1578_996.log
== TEST (2019-03-11 19:44:36) 
-- CODE:
print  *****
print(* o o *)
print *  ^  *
print * --- *
print  *****
-- ERROR:
File "XXXX", line 1
    print  *****
              ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(*****)?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 19:45:32) 
-- CODE:
print   *****
print(*  o o  *)
print *   ^   *
print *  ---  *
print   *****
-- ERROR:
File "XXXX", line 1
    print   *****
               ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(*****)?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 19:47:00) 
-- CODE:
print''   *****''
print''(*  o o  *)''
print ''*   ^   *''
print ''*  ---  *
print ''  *****''
-- ERROR:
File "XXXX", line 1
    print''   *****''
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 19:48:20) 
-- CODE:
print'   *****'
print'(*  o o  *)'
print '*   ^   *'
print '*  ---  *'
print '  ***** '
-- ERROR:
File "XXXX", line 1
    print'   *****'
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 19:48:23) 
-- CODE:
print'   *****'
print'(*  o o  *)'
print '*   ^   *'
print '*  ---  *'
print '  ***** '
-- EXECUTION TIME:
0.129648
-- ERROR:
  File "/home/codebench/codes/1578/996/main.py", line 1
    print'   *****'
                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 19:53:21) 
-- CODE:
print ("*****")
print("* o o *")
print("*  ^  *")
print("* --- *")
print ("*****")
-- OUTPUT:
*****
* o o *
*  ^  *
* --- *
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 19:53:25) 
-- CODE:
print ("*****")
print("* o o *")
print("*  ^  *")
print("* --- *")
print ("*****")
-- EXECUTION TIME:
0.19012
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
* o o *
*  ^  *
* --- *
*****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 19:53:39) 
-- CODE:
print ("*****")
print("* o o *")
print("*  ^  *")
print("* --- *")
print ("*****")
-- OUTPUT:
*****
* o o *
*  ^  *
* --- *
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 19:55:12) 
-- CODE:
print ("  *****")
print("(* o o *)")
print("*  ^  *")
print("* --- *")
print ("*****")
-- OUTPUT:
*****
(* o o *)
*  ^  *
* --- *
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 19:55:23) 
-- CODE:
print ("  *****")
print("(* o o *)")
print(" *  ^  *")
print("* --- *")
print ("*****")
-- OUTPUT:
*****
(* o o *)
 *  ^  *
* --- *
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 19:55:31) 
-- CODE:
print ("  *****")
print("(* o o *)")
print(" *  ^  *")
print(" * --- *")
print (" *****")
-- OUTPUT:
*****
(* o o *)
 *  ^  *
 * --- *
 *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 19:55:50) 
-- CODE:
print ("  *****")
print("(* o o *)")
print(" *  ^  *")
print(" * --- *")
print ("  *****")
-- OUTPUT:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 19:55:54) 
-- CODE:
print ("  *****")
print("(* o o *)")
print(" *  ^  *")
print(" * --- *")
print ("  *****")
-- EXECUTION TIME:
0.166009
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
